fix: removing a lobby bot left a seat-index gap → duplicate indexes on next join
joinLobby and addLobbyBot assign the next seatIndex as seats.size(), but
removeLobbyBot only filtered the seat out — removing a middle bot left a
gap, so the next joiner received an index that already existed. Two seats
sharing a seatIndex means a shared default color and token shape on the
client (both derive from the index) and an ambiguous turn order (players
are sorted by seatIndex).

Seat indexes are now compacted to a contiguous 0..n-1 inside the removal
update. Players reference seats by seatId, so no other state needs fixing.

Regression test: seatIndexesStayUniqueAfterRemovingAMiddleBot.